src/main/webapp/assets/css/layout/hero.css
/* Font - Poppins*/

@import url('https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

:root{

    /* Colors */

    --primary-color: #4361EE;
    --button-hover-color: #3950BE;
    --nav-active-color: #E7EBFD;
    --background-color1: #F5F5FD;
    --background-color2: #EBEFFF;
    --description-color: #555;
    --surface-color: #FFFFFF;
    --border-color: #EBEDF8;
    --text-color: #1B2559;
    --muted-text-color: #8F9BBA;
    --orange-secondary-color: #FF5B5B;
    --red-secondary-color: #FF0080;
    --green-secondary-color: #10B981;
    --purple-secondary-color: #7C3AED;
    --theme-icon-color:#8F9BBA;

    /* Font Sizes */

    --text-xs: 0.75rem;   /* 12px */
    --text-sm: 0.875rem;  /* 14px */
    --text-md: 1rem;      /* 16px */
    --text-lg: 1.125rem;  /* 18px */
    --text-xl: 1.25rem;   /* 20px */
    --text-2xl: 1.5rem;   /* 24px */
    --text-3xl: 2rem;     /* 32px */
    --text-4xl: 2.5rem;   /* 40px */

    /* Font Weight*/

    --text-bold: 700;
    --text-semi-bold: 600;
    --text-medium: 500;
    --text-regular: 400;

    /* Radius */

    --small-radius:4px;
    --medium-radius:8px;
    --large-radius:16px;

    /* Spacing */

    --space-1: 0.25rem;  /* 4px  */
    --space-2: 0.5rem;   /* 8px  */
    --space-3: 0.75rem;  /* 12px */
    --space-4: 1rem;     /* 16px */
    --space-5: 1.5rem;   /* 24px */
    --space-6: 2rem;     /* 32px */
    --space-7: 2.5rem;   /* 40px */
    --space-8: 3rem;     /* 48px */

    /* Shadows*/

    --shadow-sm: 0 4px 20px rgba(0, 0, 0, 0.03);
    --shadow-md: 0 10px 40px rgba(64, 82, 246, 0.08);
}
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background-color: var(--background-color1);
    font-family: 'Poppins', sans-serif;
    color: var(--text-description);
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    overflow-x: hidden;
}

a {
    text-decoration: none;
    color: var(--text-color);
    font-weight: 500;
    font-size: 16px;
    transition: color 0.2s;
}

a:hover {
    color: var(--primary-color);
}

.btn {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    border: none;
    cursor: pointer;
    font-family: var(--font-family);
    font-weight: var(--text-medium);
    transition: all 0.2s ease;
}

.btn-primary {
    background-color: var(--primary-color);
    color: white;
    font-size: var(--text-md);
    border-radius: 50px;
}

.btn-primary:hover {
    background-color: var(--button-hover-color);
}

.navbar {
    width: 100%;
    display: flex;
    justify-content: center;
    padding-top: 30px;
}

.nav-container {
    background-color: var(--surface-color);
    width: 90%;
    max-width: 900px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 12px 24px;
    border-radius: 100px;
    box-shadow: var(--shadow-sm);
}

.logo {
    display: flex;
    align-items: center;
    gap: 2px;
    margin-left: 20PX;
}

.nav-links {
    display: flex;
    align-items: center;
    gap: 30px;
}

.login-link {
    color: var(--description-color);
    font-weight: var(--text-medium);
    font-size: var(--text-md);
}

.login-link:hover {
    color: var(--primary-color);
}

.btn-nav {
    padding: 10px 24px;
    font-size: var(--text-md);
}

.hero-section {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 40px 5%;
}

.hero-container {
    display: flex;
    max-width: 1200px;
    width: 100%;
    align-items: center;
    gap: 80px;
}


.hero-text {
    flex: 1;
    max-width: 550px;
}

.title {
    color: var(--primary-color);
    font-size: 2.7rem;
    font-weight: 500;
    line-height: 1.2;
    letter-spacing: -1px;
    margin-bottom: 30px;
    position: relative;
}

.wave {
    position: absolute;
    bottom: -55px;
    left: 0;
    width: 80%;
    height: auto;

}

.description {
    font-size: var(--text-xl);
    line-height: 1.6;
    margin: 60px 0;
    font-weight: var(--text-medium);
    color: var(--muted-text-color);
}

.btn-large {
    padding: 16px 40px;
    font-size: var(--text-lg);
}

.hero-chat {
    flex: 1;
    max-width: 500px;
    display: flex;
    flex-direction: column;
    gap: 15px;
}

.chat-title {
    color: var(--primary-color);
    font-size: var(--text-2xl);
    font-weight: var(--text-semi-bold);
    margin-bottom: 5px;
}

.chat-window {
    background-color: var(--surface-color);
    border-radius: 20px;
    padding: 20px;
    box-shadow: var(--shadow-md);
    display: flex;
    flex-direction: column;
    gap: 12px;
}

.message {
    max-width: 85%;
    padding: 10px 18px;
    font-size: var(--text-sm);
    line-height: 1.5;
    position: relative;
    display: flex;
    flex-direction: column;
    gap: 6px;
}

.message p {
    margin: 0;

}

.message .time {
    font-size: var(--text-xs);
    display: flex;
    align-items: center;
    justify-content: flex-end;
    gap: 4px;
    align-self: flex-end;
}
.sent p{
    color: white;
}

.received{
    align-self: flex-start;
    background-color: var(--surface-color);
    border: 1px solid var(--border-color);
    color: var(--description-color);
    border-radius: 12px 12px 12px 0;
}

.sent {
    align-self: flex-end;
    background-color: var(--primary-color);
    color: var(--white);
    border-radius: 12px 12px 0 12px;
}

.sent .time {
    color: rgba(255, 255, 255, 0.8);
}

.sent.short {
    min-width: 100px;
}

.chat-input-box {
    background-color: white;
    border-radius: 50px;
    padding: 10px 10px 10px 20px;
    display: flex;
    align-items: center;
    gap: 10px;
    box-shadow: var(--shadow-sm);
}

.icon-btn {
    background: transparent;
    border: none;
    cursor: pointer;
    display: flex;
    align-items: center;
}

.chat-input {
    flex: 1;
    border: none;
    outline: none;
    font-family: var(--font-family);
    font-size: var(--text-sm);
    color: var(--description-color);
}

.chat-input::placeholder {
    color: var(--theme-icon-color);
}

.btn-send {
    background-color: var(--primary-color);
    color:white;
    border: none;
    border-radius: 50px;
    padding: 10px 20px;
    font-size: var(--text-sm);
    font-weight: var(--text-medium);
    display: flex;
    align-items: center;
    gap: 8px;
    cursor: pointer;
    transition: 0.2s;
}

.btn-send:hover {
    background-color: var(--button-hover-color);
}

.fab-profile {
    position: fixed;
    bottom: 40px;
    right: 40px;
    width: 60px;
    height: 60px;
    background-color: white;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
    cursor: pointer;
    transition: transform 0.2s;
}

.fab-profile:hover {
    transform: translateY(-5px);
}

.lock-badge {
    position: absolute;
    bottom: -2px;
    right: -2px;
    background-color: var(--primary-color);
    width: 20px;
    height: 20px;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    border: 2px solid var(--surface-color);
}

@media (max-width: 968px) {
    .hero-container {
        flex-direction: column;
        text-align: center;
        gap: 50px;
    }
    .wave{
        left: 10%;
    }
    .hero-text {
        max-width: 100%;
    }
}

@media (max-width: 600px) {
    .title {
        font-size: 2.2rem;
    }

    .nav-container {
        width: 95%;
    }
}

